Added Custom exercises, notes, and permissions plus search
